--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
       html {
         scroll-behavior: smooth;
         scroll-padding-top: 100px;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
       }
       
       body {
@@ -68,6 +72,11 @@
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
         cursor: default;
+        width: 100%;
+        min-height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow-x: hidden; /* Prevent horizontal scroll from full-width elements */
       }
       
       ::selection {
